# algolabra

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
Documents/: Maarittelydokumentti.md
documents/: IMPLEMENTATION.md  Maarittelydokumentti.md  REQUIREMENTS.md  TESTING.md  USAGE.md  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md
src/: index.py  ui.py
src/core/: exceptions.py  input_validator.py  queue.py  rpn_evaluator.py  shunting_yard.py  stack.py
src/utils/: printer.py
tests/: input_validator_test.py  queue_test.py  rpn_evaluator_test.py  stack_test.py  test_input_validator.py  test_rpn_evaluator.py  test_shunting_yard.py  test_ui.py
