[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = ""
authors = ["Jenni Jokinen <153839491+jokijen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
